--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 1500;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
   padding: 0.75rem 0;
   transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
@@ -106,9 +106,9 @@
 }
 
 .tech-title span {
-  color: #4cc9f0;
+  color: #f1f4f6;
   font-weight: 900;
-  text-shadow: 0 0 12px rgba(76, 201, 240, 0.6);
+  text-shadow: 0 0 12px rgba(0, 15, 19, 0.6);
 }
 
 .subtitle {
@@ -590,11 +590,11 @@ html {
 }
 
 /* Remove search bar related styles if they exist */
-.search-container-desktop,
+/* .search-container-desktop,
 .search-container-mobile,
 .mobile-search-btn {
   display: none !important;
-}
+} */
 /* Click animation */
 .logo-container.clicked {
   animation: logoClick 0.3s ease;
